# Distributed_Monte_Carlo_Simulations

./:  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  master.py
include/pricer/: EuropeanCall.h  MonteCarloResult.h  Parameters.h
src/: EuropeanCall.cpp  main.cpp
tests/: test_pricer.cpp
